Made the background stretch on larger screens and fixed some cold-start errors (when there is no data yet)

--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ body {
   background: url("/images/indexbg.jpg") no-repeat center center fixed;
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
+  background-size: cover;
 }
 
 /* TYPOGRAPHY */
